# TaskManager

./: .flake8  Dockerfile  pyproject.toml
main/: admin.py  filters.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_status_tag_alter_user_managers_user_role_task.py  0002_tag_alter_user_managers_user_role_task.py  0002_user_role_task_tag.py
main/models/: __init__.py  status.py  tag.py  task.py  user.py
task_manager/: settings.py  urls.py
test/: base.py  factories.py  test_admin.py  test_user.py
test/filters/: test_task_filters.py  test_user_filters.py
test/viewSets/: test_status_view_set.py  test_tag_view_set.py  test_task_view_set.py  test_user_view_set.py
