[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kuznetsov <alexanches95@gmail.com>"]
readme = "README.md"
packages = [{include = "task-manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
