[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kuznetsov <alexanches95@gmail.com>"]
readme = "README.md"
packages = [{include = "task-manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
ipython = "^8.25.0"
django-extensions = "^3.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
